[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/EnemySlime/Slime/slime5.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemySlime/Slime/slime3.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemySlime/Slime/slime4.png" type="Texture" id=3]
[ext_resource path="res://Enemies/EnemySlime/Slime/slime2.png" type="Texture" id=4]
[ext_resource path="res://Enemies/EnemySlime/Slime/slime1.png" type="Texture" id=5]
[ext_resource path="res://Enemies/EnemySlime/EnemySlime.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 6.0

[node name="EnemySlime" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 6 )
WALKING_DIRECTION = -1

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 1 )
playing = true

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 12, 0 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -10 )
shape = SubResource( 3 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
